--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 click==8.0.0
-cloud-init==21.2
+# cloud-init==21.2
 colorama==0.3.7
 command-not-found==0.3
 configobj==5.0.6
