--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ chardet==4.0.0
 click==8.0.0
 # cloud-init==21.2
 colorama==0.3.7
-command-not-found==0.3
+# command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
 cryptography==2.1.4
