--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ colorama==0.3.7
 configobj==5.0.6
 constantly==15.1.0
 cryptography==2.1.4
-decorator==5.0.7
+# decorator==5.0.7
 devscripts===2.17.12ubuntu1.1
 distro-info===0.18ubuntu0.18.04.1
 Flask==2.0.0
