--- a/requirements.txt
+++ b/requirements.txt
@@ -19,20 +19,20 @@ configobj==5.0.6
 constantly==15.1.0
 cryptography==2.1.4
 # decorator==5.0.7
-devscripts===2.17.12ubuntu1.1
-distro-info===0.18ubuntu0.18.04.1
+#devscripts===2.17.12ubuntu1.1
+#distro-info===0.18ubuntu0.18.04.1
 Flask==2.0.0
 Flask-Babel==2.0.0
 Flask-Cors==3.0.8
 Flask-HTTPAuth==4.3.0
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.5.1
-google-api-core==1.26.3
-google-api-python-client==2.4.0
-google-auth==1.30.0
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.4.4
-googleapis-common-protos==1.53.0
+#google-api-core==1.26.3
+#google-api-python-client==2.4.0
+#google-auth==1.30.0
+#google-auth-httplib2==0.1.0
+#google-auth-oauthlib==0.4.4
+#googleapis-common-protos==1.53.0
 gpg==1.10.0
 greenlet==1.1.0
 httplib2==0.19.1
