--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ Flask-SQLAlchemy==2.5.1
 #google-auth-httplib2==0.1.0
 #google-auth-oauthlib==0.4.4
 #googleapis-common-protos==1.53.0
-gpg==1.10.0
+#gpg==1.10.0
 greenlet==1.1.0
 httplib2==0.19.1
 hyperlink==17.3.1
