--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ jupyter-core==4.7.1
 keyring==10.6.0
 keyrings.alt==3.0
 l18n==2020.6.1
-language-selector==0.1
+# language-selector==0.1
 launchpadlib==1.10.6
 lazr.restfulclient==0.13.5
 lazr.uri==1.0.3
