Comment out packaging package for cloud deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,7 @@ nest-asyncio==1.5.1
 netifaces==0.10.4
 oauth==1.0.1
 oauthlib==3.1.0
-packaging==20.9
+# packaging==20.9
 PAM==0.4.2
 parameterized==0.8.1
 parso==0.8.2
